--- a/PersonalFinance/app/src/main/res/values/strings.xml
+++ b/PersonalFinance/app/src/main/res/values/strings.xml
@@ -17,20 +17,44 @@
     <string name="form_account_name">Account name</string>
     <string name="form_account_initial_balance">Initial balance</string>
     <string name="form_account_current_balance">Current balance</string>
-    <string name="form_account_add_button">Add Account</string>
+    <string name="form_account_add_button">Add New Account</string>
+    <string name="form_account_save_button">Save Account</string>
     <string name="form_account_save_msg">Account successfully created</string>
     <string name="form_account_save_error">Account creation failed</string>
     <string name="account_delete">Account successfully deleted</string>
     <string name="account_delete_error">Failed to delete the account, check that there are no transactions or transfers using this account. </string>
 
-
-
+    <!-- Categories -->
     <string name="menu_categories">Categories</string>
     <string name="description_categories">Categories description</string>
+    <string name="form_category_name">Category name</string>
+    <string name="form_category_type">Category type</string>
+    <string name="form_category_income">Income</string>
+    <string name="form_category_expense">Expense</string>
+    <string name="form_category_add_button">Add new Category</string>
+    <string name="form_category_save_button">Save Category</string>
+    <string name="form_category_save_msg">Category successfully created</string>
+    <string name="form_category_save_error">Category creation failed</string>
+    <string name="category_delete">Category successfully deleted</string>
+    <string name="category_delete_error">Failed to delete the category, check that there are no transactions using this category. </string>
+
+    <!-- Transactions -->
+    <string name="menu_transactions">Transactions</string>
+    <string name="form_transaction_account">Account</string>
+    <string name="form_transaction_category">Category</string>
+    <string name="form_transaction_from">From</string>
+    <string name="form_transaction_to">To</string>
+    <string name="form_transaction_description">Transactions description</string>
+    <string name="form_transaction_date">Date</string>
+    <string name="form_transaction_amount">Amount</string>
+    <string name="form_transaction_save_button">Save</string>
+    <string name="form_transaction_save_msg">Transaction successfully created</string>
+    <string name="form_transaction_save_error">Transaction creation failed</string>
+
 
     <string name="menu_incomes">Incomes</string>
     <string name="menu_expenses">Expenses</string>
     <string name="menu_transfers">Transfers</string>
     <string name="menu_settings">Settings</string>
-    <string name="menu_transactions">Transactions</string>
+
 </resources>
