fix:improvements to navigation, cleaning up the podium, adding comments and removing unused files

--- a/PersonalFinance/app/src/main/res/values/strings.xml
+++ b/PersonalFinance/app/src/main/res/values/strings.xml
@@ -24,8 +24,9 @@
     <string name="form_account_current_balance">Current balance</string>
     <string name="form_account_add_button">Add New Account</string>
     <string name="form_account_save_button">Save Account</string>
-    <string name="form_account_save_msg">Account successfully created</string>
-    <string name="form_account_save_error">Account creation failed</string>
+    <string name="form_account_save_msg">Account successfully saved</string>
+    <string name="form_account_save_error">Failed to save account</string>
+    <string name="form_account_required_field">Account name and initial balance is required</string>
     <string name="account_delete">Account successfully deleted</string>
     <string name="account_delete_error">Failed to delete the account, check that there are no transactions or transfers using this account. </string>
 
@@ -85,5 +86,8 @@
 
     <!-- Settings -->
     <string name="menu_settings">Settings</string>
+
+    <string name="income">Income</string>
+    <string name="expense">Expense</string>
 
 </resources>
